// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary should render correctly the component when products is empty 1`] = `
<DocumentFragment>
  <div
    class="summary"
  >
    <h3>
      Order summary
    </h3>
    <div
      class="element"
    >
      <h4>
        Sub Total
      </h4>
      <div
        data-testid="subTotal"
      >
        $ 0.00 
      </div>
    </div>
    <hr />
    0
    <div
      class="element"
    >
      <h4>
        Shipping Cost
      </h4>
      <div>
        <span>
          $ 3.99
        </span>
      </div>
    </div>
    <hr />
    <div
      class="element total"
    >
      <h5>
        Total
      </h5>
      <div
        data-testid="total"
      >
        $ 3.99
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Summary should render correctly the component when user is NOT VIP and hos NOT coupon 1`] = `
<DocumentFragment>
  <div
    class="summary"
  >
    <h3>
      Order summary
    </h3>
    <div
      class="element"
    >
      <h4>
        Sub Total
      </h4>
      <div
        data-testid="subTotal"
      >
        $ 30.00 
      </div>
    </div>
    <hr />
    0
    <div
      class="element"
    >
      <h4>
        Shipping Cost
      </h4>
      <div>
        <span>
          $ 3.99
        </span>
      </div>
    </div>
    <hr />
    <div
      class="element total"
    >
      <h5>
        Total
      </h5>
      <div
        data-testid="total"
      >
        $ 33.99
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Summary should render correctly the component when user is VIP and has coupon 1`] = `
<DocumentFragment>
  <div
    class="summary"
  >
    <h3>
      Order summary
    </h3>
    <div
      class="element"
    >
      <h4>
        Sub Total
      </h4>
      <div
        data-testid="subTotal"
      >
        $ 30.00 
      </div>
    </div>
    <hr />
    <div
      class="element"
    >
      <h4>
        Coupon Discount
      </h4>
      <div>
        % 10
      </div>
    </div>
    <div
      class="element"
    >
      <h4>
        Shipping Cost
      </h4>
      <div>
        <span>
          Free
        </span>
      </div>
    </div>
    <hr />
    <div
      class="element total"
    >
      <h5>
        Total
      </h5>
      <div
        data-testid="total"
      >
        $ 27.00
      </div>
    </div>
  </div>
</DocumentFragment>
`;
